--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "extracted-loader": "^1.0.7",
+    "file-loader": "^6.2.0",
+    "ignore-loader": "^0.1.2",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^9.0.0",
+    "img-loader": "^4.0.0",
     "next": "12.0.4",
+    "next-compose-plugins": "^2.2.1",
+    "next-optimized-images": "^2.6.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
