--- a/package.json
+++ b/package.json
@@ -9,18 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "extracted-loader": "^1.0.7",
-    "file-loader": "^6.2.0",
-    "ignore-loader": "^0.1.2",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^9.0.0",
+    "imagemin-svgo": "^10.0.0",
     "img-loader": "^4.0.0",
     "next": "12.0.4",
-    "next-compose-plugins": "^2.2.1",
-    "next-optimized-images": "^2.6.2",
+    "next-optimized-images": "^3.0.0-canary.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sass": "^1.43.4",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
